Fix progress bar labels alignment in Safari

--- a/src/app/components/forging/forging.less
+++ b/src/app/components/forging/forging.less
@@ -17,6 +17,14 @@ forging {
     position: absolute;
     font-size: 2em;
     margin-top: 15px;
-    padding: 70px 90px;
+    padding: 70px 0;
+    width: 30%;
+    text-align: center;
+  }
+
+  @media(max-width: 600px) {
+    .progress-label {
+      width: 94%;
+    }
   }
 }
